<resources>
    <string name="app_name">医疗助手-医生</string>

    <!-- Login and Register -->
    <string name="userHint">用户名/邮箱/手机号</string>
    <string name="passHint">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="commit">提交</string>
    <string name="repeat">重复密码</string>
    <string name="re_user_hint">用户名(支持字母和数字)</string>
    <string name="re_name_hint">真实姓名</string>

    <!-- Add Doctor -->
    <string name="search_doc">请添加你的医生后点击下一步</string>
    <string name="search_doc_hint">医生用户名/手机号/电子邮箱</string>
    <string name="search">查找</string>
    <string name="search_fail_hint">\t\t不好意思，您查找的医生不存在，请检查输入是否有误，或者联系你的医生</string>
    <string name="add_doc_done">已成功添加医生：医生</string>
    <string name="next">下一步</string>

    <!-- message -->
    <string name="input_hint">Send message</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hospitalHint">所在医院</string>
    <string name="departmentHint">科室</string>

    <!-- dialog -->
    <string name="cancel">取消</string>
    <string name="ok">确定</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
