<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/simpleWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:background="@drawable/register_bg"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <android.support.design.widget.TextInputLayout
            android:paddingLeft="5dp"
            android:id="@+id/d_username_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:paddingLeft="10dp"
                android:id="@+id/reg_username"
                android:inputType="textPersonName"
                android:hint="@string/re_user_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:paddingLeft="5dp"
            android:id="@+id/d_name_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:paddingLeft="10dp"
                android:id="@+id/reg_name"
                android:inputType="textPersonName"
                android:hint="@string/re_name_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <!--<android.support.design.widget.TextInputLayout
            android:paddingLeft="5dp"
            android:id="@+id/d_phone_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:paddingLeft="10dp"
                android:id="@+id/d_reg_phone"
                android:inputType="textPersonName"
                android:hint="@string/re_phone_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>-->

        <android.support.design.widget.TextInputLayout
            android:paddingLeft="5dp"
            android:id="@+id/d_hospital_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/reg_hospital"
                android:hint="@string/hospitalHint"
                android:paddingLeft="10dp"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:paddingLeft="5dp"
            android:id="@+id/d_department_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/reg_department"
                android:hint="@string/departmentHint"
                android:paddingLeft="10dp"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:paddingLeft="5dp"
            android:id="@+id/d_pass_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:id="@+id/reg_pass"
                android:hint="@string/passHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:paddingLeft="5dp"
            android:id="@+id/d_repeat_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:id="@+id/reg_pass_repeat"
                android:hint="@string/repeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:background="@drawable/login_button_selector"
            android:layout_gravity="center"
            android:id="@+id/register"
            android:text="@string/commit"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>